Broke the thing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#img5">Rear car light</a></li>
     </ul>
         <div id="img1">Kayak</div>
-        <img src="Images/a-kayak-rider-passing-by-1641874.jpg" width="30%";><br /><hr>
+        <!-- <img src="Images/a-kayak-rider-passing-by-1641874.jpg" width="30%";><br /><hr> -->
         <div id="img2">Colorful Building</div>
         <img src="Images/colorful-building-1175239.jpg" width="30%";>><br /><hr>
         <div id="img3">Tate Weather Project</div>
